--- a/index.html
+++ b/index.html
@@ -7,24 +7,17 @@
     <!-- CSS file  -->
     <link rel="stylesheet" href="style.css">
     <!-- Js file -->
-    <script src="main.js"></script>
+    <script defer src="main.js"></script>
 </head>
 <body>
     <header>
         <button type="button" value="start-btn" id="start-btn" name="start-btn">Play</button>
         <h2 class="score">Score: <span id="score">0</span> </h2>
     </header>
-
-    <div class="platform"></div>
-    <div class="platform"></div>
-    <div class="platform"></div>
-    <div class="platform"></div>
-    <div class="platform"></div>
-    <div class="platform"></div>
-    <div class="platform"></div>
-    <div class="platform"></div>
-    <div class="platform"></div>
-    <div class="platform"></div>
+    <main>
+        <div id="game-board">
+        </div>
+    </main>
     
 </body>
 </html>
